docker: tag different distro images accordingly

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -66,7 +66,7 @@ jobs:
       packages: write
 
     env:
-      IMAGE_ID: ghcr.io/${{ github.repository_owner }}/spdk-ci:poc
+      IMAGE_ID: ghcr.io/${{ github.repository_owner }}/spdk-ci:${{ inputs.distro }}
 
     container:
       image: ghcr.io/refenv/cijoe-docker:v0.9.52
@@ -125,5 +125,5 @@ jobs:
       if: ${{ github.event.inputs.push_to_registry == 'true' }}
       run: |
         docker images
-        docker tag spdk-ci:poc ${IMAGE_ID}
+        docker tag spdk-ci:${{ inputs.distro }} ${IMAGE_ID}
         docker push ${IMAGE_ID}
