--- a/cijoe/configs/qemuhost-with-guest-freebsd_14.toml
+++ b/cijoe/configs/qemuhost-with-guest-freebsd_14.toml
@@ -21,8 +21,9 @@ img_bin = "qemu-img"
 path = "{{ local.env.HOME }}/guests/generic-bios-kvm-x86_64"
 # Label of the qemu-system emulerator to use; see "qemu.systems"
 system_label = "x86_64"
-# Keyword arguments: joined onto the form: "-cpu host -smp 4 -m 4" etc.
-system_args.kwa = {cpu = "host", smp = 8, m = "12G", accel = "kvm"}
+# Due to https://doc.dpdk.org/guides/freebsd_gsg/build_dpdk.html#loading-the-dpdk-contigmem-module
+# increasing memeory here only for FreeBSD until the proper driver loading via /boot/loader.conf is fixed
+system_args.kwa = {cpu = "host", smp = 8, m = "16G", accel = "kvm"}
 # Raw arguments: passed without modification to qemu-system-{arch}
 system_args.raw = """\
 -M "type=q35,kernel_irqchip=split" \
