Remove hard-coded fedora-40-x86_64 from tets
In autorun_in_qemu there was a hard coded leftover.
when using local.env.DISTRO instead,
I noticed some places still using '-' instead
if '_', so fixing all those places in this commit.

Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/cijoe/configs/qemuhost-with-guest-fedora_40.toml
+++ b/cijoe/configs/qemuhost-with-guest-fedora_40.toml
@@ -40,7 +40,7 @@ bin = "qemu-system-x86_64"
 # SYSTEM_IMAGING: A collection of system images in the form of cloudimages,
 # diskimages, and docker images.
 #
-[system-imaging.images.fedora-40-x86_64]
+[system-imaging.images.fedora_40-x86_64]
 system_label = "x86_64"
 cloud.url = "https://mirror.netsite.dk/fedora/linux/releases/40/Cloud/x86_64/images/Fedora-Cloud-Base-Generic.x86_64-40-1.14.qcow2"
 cloud.path = "{{ local.env.HOME }}/system_imaging/cloud/Fedora-Cloud-Base-Generic.x86_64-40-1.14.qcow2"
