--- a/cijoe/workflows/autorun_in_qemu.yaml
+++ b/cijoe/workflows/autorun_in_qemu.yaml
@@ -13,7 +13,7 @@ steps:
 - name: guest_initialize
   uses: qemu.guest_initialize
   with:
-    system_image_name: fedora-40-x86_64
+    system_image_name: "{{ local.env.DISTRO }}-x86_64"
     guest_name: generic-bios-kvm-x86_64
 
 - name: guest_start
