--- a/cijoe/workflows/build_fedora_40_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_fedora_40_qcow2_using_qemu.yaml
@@ -21,7 +21,7 @@ doc: |
   some other tool or script.
 
   * Convert the image (with compression)
-    - qemu-img convert boot.img /tmp/fedora-41-x86_64.qcow2 -O qcow2 -c
+    - qemu-img convert boot.img /tmp/fedora_41-x86_64.qcow2 -O qcow2 -c
 
   * Upload it to publically available storage
 
@@ -29,13 +29,13 @@ steps:
 - name: diskimage_from_cloudimage
   uses: system_imaging.diskimage_from_cloudimage
   with:
-    pattern: "fedora-40-x86_64"
+    pattern: "fedora_40-x86_64"
 
 - name: guest_initialize
   uses: qemu.guest_initialize
   with:
     guest_name: generic-bios-kvm-x86_64
-    system_image_name: fedora-40-x86_64
+    system_image_name: fedora_40-x86_64
 
 - name: guest_start
   uses: qemu.guest_start
