pre-commit: toml sorting fedora and freebsd
Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   hooks:
   - id: toml-sort
     name: TOML-format
-    args: [--all]
+    args: [--check]
     files: \.toml$
 
 # This is for CIJOE and GitHUB Action Workflow files
