build_qcow2: change source-archive concurerncy group
This doesn't need to be set per input-distro, as all
subsequent build_qcow2 jobs will rely on the same
artifact from source-archive.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -99,7 +99,7 @@ jobs:
     runs-on: ubuntu-latest
 
     concurrency:
-      group: ${{ format('build_{0}_qcow2', inputs.distro) }}
+      group: build_qcow2_source_archive
       cancel-in-progress: false
 
     steps:
