FreeBSD add kernel source to the qcow2 image

--- a/cijoe/workflows/build_freebsd_14_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_freebsd_14_qcow2_using_qemu.yaml
@@ -60,6 +60,9 @@ steps:
   run: |
     pkg install -y git
 
+- name: kernel_src
+  uses: core.repository_prep
+
 - name: tgz_transfer
   uses: core.put
   with:
