--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -68,31 +68,47 @@ jobs:
       # * cijoe/configs/*.toml or cijoe/workflows/*.yaml - configration changed, add affected distro
       #   to the list of distros to build.
       run: |
-        distros_to_build=()
-        if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-          distros_to_build+=("${{ inputs.distro }}")
-        else
-          changed_files=$(git diff --name-only HEAD~1 HEAD)
+        #!/bin/bash
+        set -e
+        shopt -s nullglob extglob
 
-          if grep -q '.github/workflows/build_qcow2.yml' <<< $changed_files; then
-            for conf in cijoe/workflows/build_*_qcow2_using_qemu.yaml; do
-                distro=$(basename "$conf" | sed -E 's/build_(.*)_qcow2_using_qemu\.yaml/\1/')
-                distros_to_build+=("$distro")
-            done
-          else
-            for file in $changed_files; do
-              if [[ $file == cijoe/configs/qemuhost-with-guest-*.toml ]]; then
-                distro=$(basename "$file" | sed -E 's/qemuhost-with-guest-(.*)\.toml/\1/')
-              elif [[ $file == cijoe/workflows/build_*_qcow2_using_qemu.yaml ]]; then
-                distro=$(basename "$file" | sed -E 's/build_(.*)_qcow2_using_qemu\.yaml/\1/')
-              fi
+        distros_to_build=()
+        changed_files=()
+
+        [[ "${{ github.event_name }}" == "workflow_dispatch" ]] && \
+          distros_to_build+=("${{ inputs.distro }}") || \
+          changed_files=($(git diff --name-only HEAD~1 HEAD))
+
+        for file in "${changed_files[@]}"; do
+        case "$file" in
+          *build_qcow2.yml)
+              workflows_distros=(cijoe/workflows/build_*_qcow2_using_qemu.yaml)
+              workflows_distros=("${workflows_distros[@]#*build_}")
+              workflows_distros=("${workflows_distros[@]%_qcow2*}")
+              distros_to_build+=("${workflows_distros[@]}")
+              ;;
+          *qemuhost-with-guest-*.toml|*build_*qcow2_using_qemu.yaml)
+              distro=${file//@(*qemuhost-with-guest-|*build_)}
+              distro=${distro//@(.toml|_qcow2_using_qemu.yaml)}
               distros_to_build+=("$distro")
-            done
-          fi
+              ;;
+          *) ;;
+        esac
+        done
+
+        # If no distros were selected then something went really wrong here, as
+        # the "push" trigger is set to run on changes to the same files which
+        # are used in the case switch above.
+        if ((${#distros_to_build[@]} == 0)); then
+          echo "No distros to build, exiting."
+          exit 1
         fi
-        printf -v joined_distros '\"%s\",' ${distros_to_build[@]}
-        echo "Distros to build: ${joined_distros%,}"
-        echo "distro=[${joined_distros%,}]" >> $GITHUB_OUTPUT
+
+        # Prepere the output to be used by JSON parser in later workflow jobs.
+        joined_distros=($(printf '"%s"\n' "${distros_to_build[@]}" | sort -u))
+        joined_distros=$(IFS=","; echo "${joined_distros[*]}")
+        echo "distro=[$joined_distros]"
+        echo "distro=[$joined_distros]" >> $GITHUB_OUTPUT
 
   source-archive:
     needs: determine-distros
