--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -58,12 +58,14 @@ jobs:
       uses: actions/checkout@v4.1.7
       with:
         fetch-depth: 0
+    - name: Get changed files
+      id: changed-files
+      uses: tj-actions/changed-files@ed68ef82c095e0d48ec87eccea555d944a631a4c # v46
     - name: Determine distros to build
       id: set-distro
       env:
+        CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         GH_EVENT_NAME: ${{ github.event_name }}
-        GH_EVENT_BEFORE: ${{ github.event.before }}
-        GH_EVENT_AFTER: ${{ github.event.after }}
         GH_INPUTS_DISTRO: ${{ inputs.distro }}
       run: .github/scripts/build_qcow2_determine_distros.sh
 
