--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -68,8 +68,8 @@ jobs:
         | tail -n +2 >  change.json
 
         if [[ ! -s change.json ]]; then
-          echo "Change $change_num not found, exiting."
-          echo "Either it's a private change or in restricted branch."
+          echo "Change $change_num not found, exiting." >> $GITHUB_STEP_SUMMARY
+          echo "Either it's a private change or in restricted branch." >> $GITHUB_STEP_SUMMARY
           gh run cancel ${{ github.run_id }} -R ${{ github.repository }}
         fi
 
@@ -77,21 +77,21 @@ jobs:
         # .work_in_progress is not set when false
         work_in_progress="$(jq -r '.work_in_progress' change.json)"
         if [[ "$work_in_progress" == "true" ]]; then
-          echo "Ignore. Patch is currently WIP."
+          echo "Ignore. Patch is currently WIP." >> $GITHUB_STEP_SUMMARY
           gh run cancel ${{ github.run_id }} -R ${{ github.repository }}
         fi
 
         # Only test latest patch set
         current_patch_set="$(jq -r '.current_revision_number' change.json)"
         if ((current_patch_set != $patch_set)); then
-          echo "Ignore. Patch set $patch_set is not the latest."
+          echo "Ignore. Patch set $patch_set is not the latest." >> $GITHUB_STEP_SUMMARY
           gh run cancel ${{ github.run_id }} -R ${{ github.repository }}
         fi
 
         # Test only changes without a Verified vote already present
         verified=$(jq -r ".labels.Verified.all[]? | select(.username==\"${{ secrets.GERRIT_BOT_USER }}\").value" change.json)
         if ((verified != 0)); then
-          echo "Ignore. Patch already has a vote from CI."
+          echo "Ignore. Patch already has a vote from CI." >> $GITHUB_STEP_SUMMARY
           gh run cancel ${{ github.run_id }} -R ${{ github.repository }}
         fi
 
