nvmf-rdma: rename uploaded artifact name
Rename to better match already existing "common-job-*"
naming from common tests workflow.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/nvmf-rdma.yml
+++ b/.github/workflows/nvmf-rdma.yml
@@ -48,4 +48,4 @@ jobs:
       if: always()
       with:
         path: ./output
-        name: nvmf-rdma-vm_artifacts
+        name: hpe-job-nvmf-rdma
