summary: change download artifacts pattern
Change the pattern to also match artifacts generated
by nvmf-rdma.yml workflow.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/summary.yml
+++ b/.github/workflows/summary.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Download artifact tarballs
       uses: actions/download-artifact@v4.1.8
       with:
-        pattern: 'common-job-*'
+        pattern: '*-job-*'
         path: ./_autorun_summary
 
     - name: Untar the SPDK repo
