build_qcow2: make cloudinit report artifact name unique
Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -143,7 +143,7 @@ jobs:
       if: always()
       with:
         path: ci/cijoe/cijoe-output
-        name: cijoe-cloudinit-report
+        name: cijoe-${{ matrix.distro }}-cloudinit-report
 
     - name: Change image format and compress
       run: |
