per-patch: add default run-name
Otherwise if evaluating the run-name fails, the jobs would be
named 'false'.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -13,6 +13,7 @@ run-name: >-
     || github.event_name == 'workflow_dispatch' && inputs.client_payload == '' && format('Manual: SPDK master')
     || github.event_name == 'repository_dispatch' && github.event.client_payload != '' && format('({0}/{1}){2}',
        github.event.client_payload.change.number, github.event.client_payload.patchSet.number, github.event.client_payload.change.subject)
+    || format('SPDK per-patch')
   }}
 
 on:
