per-patch: account for NVMe-oF RDMA tests results
Looks like we only counted the common job results
in the summary job.

This was probably missed because autorun_post job previously
could have failed with no RDMA tests. If the set of tests in
TCP and RDMA are the same, it thinks all tests were executed.
They were, just not in both variants as we would expect.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -135,5 +135,5 @@ jobs:
     uses: ./.github/workflows/summary.yml
     with:
       client_payload: ${{ needs.env_vars.outputs.client_payload }}
-      result: ${{ needs.common.result }}
+      result: ${{ (needs.common.result == 'success' && needs.hpe.result == 'success') && 'success' || 'failure' }}
     secrets: inherit
