rdma: add timeout to the RDMA job
SPDK tests usually are meant to finish in up to 30min.
The common tests part of per-patch have a timeout set to
60min, so use that here in order to prevent hangs in tests
blocking CI.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/nvmf-rdma.yml
+++ b/.github/workflows/nvmf-rdma.yml
@@ -19,6 +19,7 @@ on:
 jobs:
   hpe-nvmf-rdma:
     runs-on: [hpe-rdma-vm]
+    timeout-minutes: 60
     env:
       gerrit_ref: ${{ inputs.client_payload != '' && fromJson(inputs.client_payload).patchSet.ref || inputs.gerrit_ref }}
       spdk_path: './spdk'
