nvme: make zns more explicit configuration
FreeBSD, for example doesn't support ZNS yet

Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -96,7 +96,7 @@ jobs:
         - scan-build-container-autotest
         - check-so-deps-container-autotest
         include:
-        - nvme_setup: "default"
+        - nvme_setup: "zns"
         - distro: "fedora_40"
         - workflow: ftl-vm-autotest
           nvme_setup: "ftl"
