ci: add new test for iscsi-vm-autotest
Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -91,6 +91,7 @@ jobs:
         - bdev-vm-autotest
         - nvmf-tcp-vm-autotest
         - nvmf-tcp-uring-vm-autotest
+        - iscsi-vm-autotest
         - unittest-gcc-container-autotest
         - check-format-container-autotest
         - release-build-gcc-container-autotest
