ci: add new test for release-build-clang-container-autotest
Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -96,6 +96,7 @@ jobs:
         - unittest-gcc-container-autotest
         - check-format-container-autotest
         - release-build-gcc-container-autotest
+        - release-build-clang-container-autotest
         - doc-container-autotest
         - build-files-container-autotest
         - scan-build-container-autotest
