--- a/cijoe/workflows/autorun_in_qemu.yaml
+++ b/cijoe/workflows/autorun_in_qemu.yaml
@@ -106,6 +106,10 @@ steps:
   run: |
     rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/release-build-gcc-container-autotest.conf && build_release
 
+- name: release-build-clang-container-autotest
+  run: |
+    rootdir=/opt/spdk && cd $rootdir && export CC=/usr/bin/clang CXX=/usr/bin/clang++ && source ./test/common/autobuild_common.sh /opt/configs/release-build-clang-container-autotest.conf && build_release
+
 - name: doc-container-autotest
   run: |
     rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/empty.conf && build_doc
