ci: add new test for unittest-clang-container-autotest
Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/cijoe/configs/autorun_configs/unittest-clang-container-autotest.conf
+++ b/cijoe/configs/autorun_configs/unittest-clang-container-autotest.conf
@@ -1,3 +1,4 @@
+SPDK_RUN_VALGRIND=0
 SPDK_TEST_UNITTEST=1
 SPDK_TEST_BLOCKDEV=1
 SPDK_TEST_ISAL=1
@@ -9,5 +10,7 @@ SPDK_TEST_RBD=1
 SPDK_TEST_URING=1
 SPDK_TEST_NVME_CUSE=1
 SPDK_TEST_VFIOUSER=1
+SPDK_TEST_DAOS=0
+SPDK_RUN_ASAN=1
+SPDK_RUN_UBSAN=1
 SPDK_TEST_XNVME=1
-SPDK_TEST_RELEASE_BUILD=1
