--- a/cijoe/workflows/autorun_in_qemu.yaml
+++ b/cijoe/workflows/autorun_in_qemu.yaml
@@ -98,6 +98,10 @@ steps:
   run: |
     rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/unittest-gcc-container-autotest.conf && ocf_precompile && unittest_build && ./test/unit/unittest.sh
 
+- name: unittest-clang-container-autotest
+  run: |
+    rootdir=/opt/spdk && cd $rootdir && export CC=/usr/bin/clang CXX=/usr/bin/clang++ && source ./test/common/autobuild_common.sh /opt/configs/unittest-clang-container-autotest.conf && ocf_precompile && unittest_build && ./test/unit/unittest.sh
+
 - name: check-format-container-autotest
   run: |
     rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/check-format-container-autotest.conf && check_format
