--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -94,6 +94,7 @@ jobs:
         - iscsi-vm-autotest
         - iscsi-uring-vm-autotest
         - unittest-gcc-container-autotest
+        - unittest-clang-container-autotest
         - check-format-container-autotest
         - release-build-gcc-container-autotest
         - release-build-clang-container-autotest
