--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -87,16 +87,16 @@ jobs:
         distro:
         - quay.io/centos/centos:9
         - quay.io/centos/centos:10
-        - docker.io/rockylinux/rockylinux:9
-        - docker.io/rockylinux/rockylinux:10
-        - docker.io/library/ubuntu:20.04
-        - docker.io/library/ubuntu:22.04
-        - docker.io/library/ubuntu:24.04
-        - docker.io/library/fedora:42
-        - docker.io/library/fedora:43
-        - docker.io/library/debian:12.12
-        - docker.io/library/debian:11.11
-        - docker.io/opensuse/leap:15.6
+        # - docker.io/rockylinux/rockylinux:9
+        # - docker.io/rockylinux/rockylinux:10
+        # - docker.io/library/ubuntu:20.04
+        # - docker.io/library/ubuntu:22.04
+        # - docker.io/library/ubuntu:24.04
+        # - docker.io/library/fedora:42
+        # - docker.io/library/fedora:43
+        # - docker.io/library/debian:12.12
+        # - docker.io/library/debian:11.11
+        # - docker.io/opensuse/leap:15.6
         # - docker.io/opensuse/leap:16.0
         # - mcr.microsoft.com/azurelinux/base/core:3.0
         # - docker.io/library/archlinux:base-20250907.0.417472
